tests/fixtures/invalid/min_dict_none.py
# Cannot call min() with Dict[str, int], None
x = min({"a": 1}, None)
